add README file

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
     "build": "tsc",
-    "start": "node ./dist/app.js",
+    "start": "node ./dist/src/app.js",
     "make:migrations": "npx knex migrate:latest",
     "make:seeds": "npx knex seed:run"
   },
